<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_TestCycle" Id="{47cb94a4-528b-4079-8821-cbd80eb64f35}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	//enter cycle test mode
	g_enterCycleTestMode:ARRAY[1..g_sArmNum] OF BOOL;
	
	//start motion flag
	g_startMotion:ARRAY[1..g_sArmNum] OF BOOL;
	
	//slave arm motor encoder and joint encoder
	g_slaveArmMotorEncoder:ARRAY[1..g_sJntNum] OF Vec8di;
	g_slaveArmjntEncoder:ARRAY[1..g_sJntNum] OF Vec8di;
	
	//setup arm motor encoder and joint encoder
	g_setupArmMotorEncoder:ARRAY[1..g_setupJntNum] OF Vec5di;
	g_setupArmjntEncoder:ARRAY[1..g_setupJntNum] OF Vec5di;
	
	//setup arm motor encoder and joint encoder
	g_cartMotorEncoder:ARRAY[1..g_setupJntNum] OF Vec8di;
	g_cartjntEncoder:ARRAY[1..g_setupJntNum] OF Vec8di;
	
	//communication status
	g_comStatus:ARRAY[1..g_sJntNum] OF Vec8b;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>